--- a/css.scss
+++ b/css.scss
@@ -15,23 +15,28 @@ body {
 
 blockquote {
 
-	p:last-of-type {
+	p {
 		margin-bottom: 0.5em;
 	}
 
 	cite {
 		&::before {
-			content: '\2014';
+			content: '–';
 			padding: 0 0.5em 0 1em;
 		}
 	}
 }
 
 button {
-	border: 1px solid;
+	border: 1px solid rgba(0,0,0,0.25);
 	border-radius: 0.5em;
 	padding: 0.5em 1em;
 	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+	background-color: hsl(0,0%,90%);
+
+	&:focus  { background-color: hsl(0,0%,95%); }
+	&:active { background-color: hsl(0,0%,85%); }
 }
 
 #auth {
